MOBILSDK-2077: upgrade to ForeSee SDK v5.1.0
- Bump deployment targets
- Remove Replay sample
- Fix a couple warnings

--- a/InternationalizationSample/InternationalizationSample/en.lproj/Localizable.strings
+++ b/InternationalizationSample/InternationalizationSample/en.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 
 "FSInviteDeclineButtonText"="No, thanks";
 "FSInviteAcceptButtonText"="Yes, I'll help";
-"FSInviteTitle"="We'd welcome your feedback!";
+"FSInviteTitle"="We want your feedback!";
 
 "FSContactInviteBody"="Can we email or text you later a brief customer satisfaction survey so we can improve your mobile experience?";
 "FSContactDetailsTitle"="Thank you for helping!";
