MOBILSDK-2193: Minor string changes

--- a/LocalNotificationSample/LocalNotificationSample/en.lproj/Localizable.strings
+++ b/LocalNotificationSample/LocalNotificationSample/en.lproj/Localizable.strings
@@ -6,4 +6,4 @@
   Copyright (c) 2012 ForeSee. All rights reserved.
 */
 
-"FSLocalNotificationBody" = "Your text here!";
+"FORESEE_Notification_invite_Text" = "Your text here!";
