--- a/AdvancedSample/README
+++ b/AdvancedSample/README
@@ -2,8 +2,10 @@ This sample project demonstrates a more advanced implementation of the ForeSee t
 
 Features:
 
-* A ForeSee measure survey triggered by a "significant event" count, which can be incremented using a button in the app. The user will become eligibile for inviation was a configured threshold is met.
-* A ForeSee Feedback survey
-* Localization of invites/survey. This app supports invite text overrides for Spanish, French, German, and Portuguese and can show surveys in English, French, and Spanish. Change your device's language to trigger these changes.
+* A ForeSee measure survey triggered by a "significant event" count, which can be incremented using a button in the app. The user will 
+become eligibile to receive and invitation once a configured threshold is met.
+* A ForeSee Feedback survey 
+* Localization of invites/survey. This app supports invite text overrides for Spanish, French, German, and Portuguese and can show surveys in English, French, and Spanish. 
+Change your device's language setting to view invites/surveys in another language.
 
 
