--- a/DBASample/README
+++ b/DBASample/README
@@ -1,8 +1,8 @@
-This sample project demonstrates an implementation of the Verint DBA code in an empty iPhone app.
+This sample project demonstrates an implementation of the Verint DBA module in an empty iPhone app.
 
 Features:
 
-* Start SDK using local configuration
+* Start Verint SDK using local configuration
 * Start and stop recording using DBA SDK API
 * Mask and unmask view using DBA SDK API
 * Debug masking
