--- a/DBASample/README
+++ b/DBASample/README
@@ -7,4 +7,4 @@ Features:
 * Mask and unmask view using DBA SDK API
 * Debug masking
 
-The recorded session will be available on CxSuite after some time (~1 hour) required for processing video and other session data.
+The recorded session will be available on CxSuite after some time (~1 hour) required for processing video and other session data. To check sessions under your CxSuite account you should have personal "customerId" and "customerKey". Change "customerId" and "customerKey" values in the "exp_configuration.json" local configuration file and rebuild Demo application. CxSuite address: https://cxsuite.foresee.com
