--- a/BasicSample/README
+++ b/BasicSample/README
@@ -1,3 +1,3 @@
-This sample project demonstrates a basic implementation of the ForeSee trigger code in an empty iPhone app.
-It uses the provided FSInviteView to show a modal dialog to the user inviting them to take a survey when
+This sample project demonstrates a basic implementation of the Verint Predictive code in an empty iPhone app.
+It uses the provided EXPInviteView to show a modal dialog to the user inviting them to take a survey when
 they have met the configured threshold.
