VOC-41001 - Updated BasicSwiftSample with Verint Branding.

--- a/BasicSwiftSample/README
+++ b/BasicSwiftSample/README
@@ -1,1 +1,1 @@
-This sample project demonstrates a basic Swift implementation of the ForeSee trigger code. It uses a bridging header to include the SDK.
+This sample project demonstrates a basic Swift implementation of the Verint Predictive code. It uses a bridging header to include the SDK.
