VOC-41001 - replaced foresee, FS, feedback and other outdated names.

--- a/AdvancedSample/AdvancedSample/de.lproj/LaunchScreen.strings
+++ b/AdvancedSample/AdvancedSample/de.lproj/LaunchScreen.strings
@@ -2,5 +2,5 @@
 /* Class = "UILabel"; text = "AdvancedSample"; ObjectID = "GJd-Yh-RWb"; */
 "GJd-Yh-RWb.text" = "AdvancedSample";
 
-/* Class = "UILabel"; text = "Copyright © 2019 ForeSee. All rights reserved."; ObjectID = "obG-Y5-kRd"; */
-"obG-Y5-kRd.text" = "Copyright © 2019 ForeSee. All rights reserved.";
+/* Class = "UILabel"; text = "Copyright © 2023 Verint. All rights reserved."; ObjectID = "obG-Y5-kRd"; */
+"obG-Y5-kRd.text" = "Copyright © 2023 Verint. All rights reserved.";
