--- a/AdvancedSample/AdvancedSample/de.lproj/Localizable.strings
+++ b/AdvancedSample/AdvancedSample/de.lproj/Localizable.strings
@@ -1,11 +1,11 @@
 /* 
-  ForeSeeInvite.strings
+  Localizable.strings
   AdvancedSample
 
   Created by Wayne Burkett on 11/12/19.
   Copyright © 2019 ForeSee. All rights reserved.
 */
 
-"FORESEE_Invite_InSession_DeclineButton"="Nein Danke";
-"FORESEE_Invite_InSession_AcceptButton"="Ja ich helfe";
-"FORESEE_Invite_InSession_InvitePage_Title"="Wir wollen Ihr Feedback!";
+"EXP_Invite_InSession_DeclineButton"="Nein Danke";
+"EXP_Invite_InSession_AcceptButton"="Ja ich helfe";
+"EXP_Invite_InSession_InvitePage_Title"="Wir wollen Ihr Feedback!";
