--- a/AdvancedSample/AdvancedSample/pt-BR.lproj/Localizable.strings
+++ b/AdvancedSample/AdvancedSample/pt-BR.lproj/Localizable.strings
@@ -1,11 +1,11 @@
 /* 
-  ForeSeeInvite.strings
+  Localizable.strings
   AdvancedSample
 
   Created by Wayne Burkett on 11/12/19.
   Copyright © 2019 ForeSee. All rights reserved.
 */
 
-"FORESEE_Invite_InSession_DeclineButton"="Não, obrigado";
-"FORESEE_Invite_InSession_AcceptButton"="Sim, eu vou ajudar";
-"FORESEE_Invite_InSession_InvitePage_Title"="Queremos o seu feedback!";
+"EXP_Invite_InSession_DeclineButton"="Não, obrigado";
+"EXP_Invite_InSession_AcceptButton"="Sim, eu vou ajudar";
+"EXP_Invite_InSession_InvitePage_Title"="Queremos o seu feedback!";
