--- a/AdvancedSample/AdvancedSample/fr.lproj/Localizable.strings
+++ b/AdvancedSample/AdvancedSample/fr.lproj/Localizable.strings
@@ -1,11 +1,11 @@
 /* 
-  ForeSeeInvite.strings
+  Localizable.strings
   AdvancedSample
 
   Created by Wayne Burkett on 11/12/19.
   Copyright © 2019 ForeSee. All rights reserved.
 */
 
-"FORESEE_Invite_InSession_DeclineButton"="Non, merci";
-"FORESEE_Invite_InSession_AcceptButton"="J'accepte";
-"FORESEE_Invite_InSession_InvitePage_Title"="Nous aimerions recevoir vos commentaires!";
+"EXP_Invite_InSession_DeclineButton"="Non, merci";
+"EXP_Invite_InSession_AcceptButton"="J'accepte";
+"EXP_Invite_InSession_InvitePage_Title"="Nous aimerions recevoir vos commentaires!";
