VOC-27080: VOC-27080: Updated Advanced Sample - updated to use SM, removed Digital usages, updated README and HOWTO.

--- a/AdvancedSample/AdvancedSample/de.lproj/Localizable.strings
+++ b/AdvancedSample/AdvancedSample/de.lproj/Localizable.strings
@@ -9,3 +9,5 @@
 "EXP_Invite_InSession_DeclineButton"="Nein Danke";
 "EXP_Invite_InSession_AcceptButton"="Ja ich helfe";
 "EXP_Invite_InSession_InvitePage_Title"="Wir wollen Ihr Feedback!";
+
+"survey_name" = "SampleSurvey";
